--- a/apps/1d/shallow_water/dam_break/parameters.ini
+++ b/apps/1d/shallow_water/dam_break/parameters.ini
@@ -1,27 +1,33 @@
-; Parameters common to dogpack applications
+; Parameters common to finess applications
 [finess]
-ndims       = 1         ; 1, 2, or 3
-nout        = 10        ; number of output times to print results
-tfinal      = 0.2       ; final time
-initial_dt      = 0.0002    ; initial dt
+ndims       = 1             ; 1, 2 or 3
+nout        = 10            ; number of output times to print results
+;tfinal      = 1.591549430918953e-01 ; final time 
+tfinal      = 0.2           ; final time 
+initial_dt  = 0.0002       ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 0.40      ; max allowable Courant number 1/(2k-1)
-desired_cfl     = 0.34     ; desired Courant number
+max_cfl     = 0.4      ; max allowable Courant number
+desired_cfl = 0.34   ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 5  ; =method(1)= order of accuracy in space
-time_order  = 3  ; =method(2)= order of accuracy in time
-verbosity   = 1  ; =method(4)= verbosity of output
-mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
-maux        = 1  ; =method(6)= maux (number of aux arrays, maux >= mcapa)
-source_term = false  ; =method(7)= source term (1-yes, 0-no)
-meqn        = 2  ; number of equations
-;mrestart    = 0  ; restart from old data (1-yes, 0-no)
-;nstart      = 0  ; if ;mrestart==1: from file q(nstart)_restart.dat
-;datafmt     = 1  ; 1 for ascii, 5 for hdf5.
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+space_order = 5  ; order of accuracy in space
+time_order  = 5  ; order of accuracy in time
+meqn        = 2            ; number of equations
+verbosity   = 1            ; verbosity of output
+mcapa       = 0            ; mcapa (capacity function index in aux arrays)
+maux        = 1            ; maux (number of aux arrays, maux >= mcapa)
+source_term = false        ; source term (true or false)
+output_dir  = output       ; location of the output directory
+global_alpha = true        ; parameter for using a global value for alpha
+
 [grid]
-mx    = 100   ; number of grid elements in x-direction
-mbc   = 5     ; number of ghost cells on each boundary
-xlow  = 0.0e0 ; left end point
-xhigh = 1.0e0 ; right end point
+mx    =      100 ; number of grid elements in x-direction
+mbc   =      5   ; number of ghost cells on each boundary
+xlow  =  0.0e0   ; left end point
+xhigh =  1.0e0   ; right end point
+
+[weno]
+weno_version  = JS     ; type of WENO reconstruction (e.g. JS, FD, Z)
+epsilon       = 1e-12  ; regulization parameter  ( epsilon > 0.0        )
+alpha_scaling = 1.1    ; scaling parameter       ( alpha_scaling >= 1.0 )
+
