--- a/apps/1d/shallow_water/dam_break/Makefile
+++ b/apps/1d/shallow_water/dam_break/Makefile
@@ -9,7 +9,7 @@ include $(FINESS)/apps/1d/shallow_water/lib/Makefile.defs
 
 # overridden library objects
 #
-FinSolveUser           = $(APP_LIB)/FinSolveDiffTransform
+FinSolveUser           = $(FINESS)/lib/1d/FinSolveDiffTransform
 
 # Experimental new method that uses WENO *differentiation* on the interior of
 # the time-integrated flux function.
