--- a/apps/3d/euler/CMakeLists.txt
+++ b/apps/3d/euler/CMakeLists.txt
@@ -1,14 +1,12 @@
 append_current_app_name()
 
+override(SOURCES AuxFunc.cpp DFluxFunc.cpp D2FluxFunc.cpp SourceTermFunc.cpp)
+
 list(APPEND SOURCES
-	${CMAKE_CURRENT_SOURCE_DIR}/AuxFunc.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/D2FluxFunc.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/DFluxFunc.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/FluxFunc.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/ProjectLeftEig.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/ProjectRightEig.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/SetWaveSpd.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/SourceTermFunc.cpp
 	)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
