--- a/apps/3d/mhd/shocktubeX/CMakeLists.txt
+++ b/apps/3d/mhd/shocktubeX/CMakeLists.txt
@@ -1,15 +1,14 @@
 append_current_app_name()
 
-#override(SOURCES AfterQinit.cpp)
+override(SOURCES SourceTermFunc.cpp)
 list(APPEND SOURCES
 	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/QinitFunc.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/SetBndValues.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/SourceTermFunc.cpp
 	)
 
 add_generate_sources(MAIN_PYTHON_SCRIPT generate_iniparams.py
-					OTHER_PYTHON_SCRIPTS this_app_params.py
+		    OTHER_PYTHON_SCRIPTS this_app_params.py 
 					GENERATED_SOURCES IniParams.h IniParams.cpp)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
