--- a/apps/3d/burgers/CMakeLists.txt
+++ b/apps/3d/burgers/CMakeLists.txt
@@ -1,8 +1,8 @@
 append_current_app_name()
 
+override(SOURCES DFluxFunc.cpp D2FluxFunc.cpp)
+
 list(APPEND SOURCES
-	${CMAKE_CURRENT_SOURCE_DIR}/D2FluxFunc.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/DFluxFunc.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/FluxFunc.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/ProjectLeftEig.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/ProjectRightEig.cpp
