--- a/apps/2d/advection/smooth_example/Makefile
+++ b/apps/2d/advection/smooth_example/Makefile
@@ -12,17 +12,16 @@ include $(FINESS)/apps/2d/advection/lib/Makefile.defs
 # overridden library objects
 #
 AuxFunc                 = AuxFunc
-FinSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
+FinSolveUser            = $(APP_LIB)/FinSolveDiffTransform
 ## ------------------------------------------------------------------------- ##
 
-ALL_OBJECTS = \
-$(COMMON_OBJECTS) 
+ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS)
 
-ALL_SOURCES = \
-$(COMMON_SOURCES)
+ALL_SOURCES = $(COMMON_SOURCES) $(APP_LIB_SOURCES)
 
 
 LOCAL_INCLUDE+=-I.
+LOCAL_INCLUDE+=-I$(FINESS)/apps/2d/advection/lib/
 
 ### targets ###
 
