2d euler really working

--- a/apps/2d/euler/lib/Makefile.defs
+++ b/apps/2d/euler/lib/Makefile.defs
@@ -37,8 +37,10 @@ ApplyMPPLimiter2D   = $(APP_LIB)/ApplyMPPLimiter2D
 # place to add objects and sources
 #
 APP_LIB_OBJECTS = \
+   $(APP_LIB)/ConstructDiffTransformL.o \
 
 #
 APP_LIB_SOURCES = \
+   $(APP_LIB)/ConstructDiffTransformL.cpp \
 
 #
