--- a/config/Makefile.config
+++ b/config/Makefile.config
@@ -32,10 +32,10 @@ USE_H5CPP = 0
 #            : you do not need to include this flag when compiling on mac os x
 
 # serial code with optimizer turned on:
-LINK = time g++
+LINK = time g++ -O4
 
 # the following symbol is deprecated
-FFLAGS =  -c $(INCLUDE_LIBS)
+FFLAGS =   -c  $(INCLUDE_LIBS)
 # in favor of
 COMPILE = $(LINK) $(FFLAGS) #$(COMPILE_FLAGS)
 
