added a handful of comments to some library routines

--- a/apps/2d/advection/sine_example/Makefile
+++ b/apps/2d/advection/sine_example/Makefile
@@ -12,6 +12,7 @@ include $(FINESS)/apps/2d/advection/lib/Makefile.defs
 # overridden library objects
 #
 AuxFunc         = AuxFunc
+FinSolveUser    = $(APP_LIB)/FinSolveDiffTransform
 ## ------------------------------------------------------------------------- ##
 
 ALL_OBJECTS = \
