--- a/lib/Makefile.targets
+++ b/lib/Makefile.targets
@@ -1,6 +1,6 @@
 
 finess.exe: $(ALL_OBJECTS) $(ALL_SOURCES)
-	$(LINK) $(ALL_OBJECTS) -o $(EXECUTABLE)
+	$(CXX) $(FFLAGS) $(ALL_OBJECTS) -o $(EXECUTABLE)
 
 # does anyone use this any more?
 # you can also do this using: make -s ls | xargs cat > dog2program.cpp
