added one extra comment to Makefile.config

--- a/config/Makefile.config
+++ b/config/Makefile.config
@@ -50,6 +50,7 @@ CXX = g++
 # threaded code with the optimizer turned on:
 FFLAGS = -O4 -fopenmp
 
+# Command used for compiling each object
 COMPILE = time $(CXX) $(FFLAGS) -c $(INCLUDE_LIBS)
 
 # Can be used to generate ctags files for navigating code.
