cleaning up a handful of 1D diff-transform applications

--- a/apps/1d/burgers/shock/parameters.ini
+++ b/apps/1d/burgers/shock/parameters.ini
@@ -8,7 +8,8 @@ max_dt      = 1.0        ; max allowable dt
 max_cfl     = 0.44       ; max allowable Courant number
 desired_cfl = 0.40       ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5   ; order of accuracy in space
 time_order  = 3   ; order of accuracy in time
 verbosity   = 1   ; verbosity of output
@@ -16,9 +17,12 @@ mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
 source_term = false   ; source term (true or false)
 meqn        = 1   ; number of equations
+global_alpha = true  ; parameter for using a global value for alpha
 
 [grid]
 mx    = 100   ; number of grid elements in x-direction
-mbc   = 3     ; number of ghost cells on each boundary
+mbc   = 5     ; number of ghost cells on each boundary
 xlow  = 0.0e0 ; left end point
 xhigh = 1.0e0 ; right end point
+
+
