more work on two-fluid : starting to consolidate some parameters

--- a/apps/2d/two-fluid/grad-five-moment/shock_tube/parameters.ini
+++ b/apps/2d/two-fluid/grad-five-moment/shock_tube/parameters.ini
@@ -1,7 +1,7 @@
 ; Parameters common to FINESS applications
 [finess]
 ndims       = 2          ; 1, 2, or 3
-nout        = 1          ; number of output times to print results
+nout        = 10         ; number of output times to print results
 tfinal      = 40         ; final time
 initial_dt  = 0.018      ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
@@ -25,40 +25,64 @@ meqn        = 17  ; >=16; B_clean:>=17; E_clean:>=18; entropy:20
 ;   grid data
 ; -------------------------------------------------
 [grid]
-mx    = 32      ; number of grid elements in x-direction
-my    = 32      ; number of grid elements in y-direction
+mx    = 64      ; number of grid elements in x-direction
+my    = 64      ; number of grid elements in y-direction
 mbc   =  5      ; number of ghost cells on each boundary
 xlow  =  0.0e0  ; left end point
 xhigh =  12.566370614359172 ; 6.283185307179586 ; right end point
 ylow  =  0.0e0  ; lower end point
 yhigh =  6.283185307179586 ; 3.141592653589793 ; upper end point
 
-;; TODO - do I want to use this section!? -DS ;;
-[componentParams]
+;[componentParams]
+;TODO - I moved this stuff was moved to Components.h because the parser was
+;choking on this section
 
-; highest-index component listed first to signal array size
-q_names{20} = entropy_e
-q_names{19} = entropy_i
-q_names{18} = phi   ; E-field cleaning
-q_names{17} = psi   ; B-field cleaning
-q_names{16} = E3    ; 3-electric field
-q_names{15} = E2    ; 2-electric field
-q_names{14} = E1    ; 1-electric field
-q_names{13} = B3    ; 3-magnetic field
-q_names{12} = B2    ; 2-magnetic field
-q_names{11} = B1    ; 1-magnetic field
-q_names{10} = N_e   ; energy (elc)
-q_names{9}  = M3_e  ; 3-momentum (elc)
-q_names{8}  = M2_e  ; 2-momentum (elc)
-q_names{7}  = M1_e  ; 1-momentum (elc)
-q_names{6}  = rho_e ; rho (elc)
-q_names{5}  = N_i   ; energy (ion)
-q_names{4}  = M3_i  ; 3-momentum (ion)
-q_names{3}  = M2_i  ; 2-momentum (ion)
-q_names{2}  = M1_i  ; 1-momentum (ion)
-q_names{1}  = rho_i ; rho (ion)
+;highest-index component listed first to signal array size
+;q_names{20} = entropy_e ; entropy tracking (depends on meqn)
+;q_names{19} = entropy_i ; entropy tracking (depends on meqn)
+;q_names{18} = phi   ; E-field cleaning
+;q_names{17} = psi   ; B-field cleaning
+;q_names{16} = E3    ; 3-electric field
+;q_names{15} = E2    ; 2-electric field
+;q_names{14} = E1    ; 1-electric field
+;q_names{13} = B3    ; 3-magnetic field
+;q_names{12} = B2    ; 2-magnetic field
+;q_names{11} = B1    ; 1-magnetic field
+;q_names{10} = N_e   ; energy (elc)
+;q_names{9}  = M3_e  ; 3-momentum (elc)
+;q_names{8}  = M2_e  ; 2-momentum (elc)
+;q_names{7}  = M1_e  ; 1-momentum (elc)
+;q_names{6}  = rho_e ; rho (elc)
+;q_names{5}  = N_i   ; energy (ion)
+;q_names{4}  = M3_i  ; 3-momentum (ion)
+;q_names{3}  = M2_i  ; 2-momentum (ion)
+;q_names{2}  = M1_i  ; 1-momentum (ion)
+;q_names{1}  = rho_i ; rho (ion)
 
-; === application parameters below this line ===
+; -------------------------------------------------
+;  Initial condition parameters
+; -------------------------------------------------
+[initial]
+rhol  =  1.0   ; density (on left side of jump)
+unl   = -0.4   ; normal velocity (on left side of jump)
+utl   =  0.0   ; transverse velocity (on left side of jump)
+u3l   =  0.0   ; z-velocity (on left side of jump)
+pl    =  1.0   ; pressure (on left side of jump)
+Bnl   =  0.75  ; normal magnetic field (on left side of jump)
+Btl   =  1.0   ; transverse magnetic field (on left side of jump)
+B3l   =  0.0   ; z-magnetic field (on left side of jump)
+;
+rhor  =  0.2   ; density (on left side of jump)
+unr   = -0.4   ; normal velocity (on left side of jump)
+utr   =  0.0   ; transverse velocity (on left side of jump)
+u3r   =  0.0   ; z-velocity (on left side of jump)
+pr    =  0.1   ; pressure (on left side of jump)
+Bnr   =  0.75  ; normal magnetic field (on left side of jump)
+Btr   = -1.0   ; transverse magnetic field (on left side of jump)
+B3r   =  0.0   ; z-magnetic field (on left side of jump)
+;
+;angle = 0.52359877559 ; pi/6
+;angle = 0.78539816339 ; pi/4
 
 [plasma]
 model_name                     = g05
@@ -73,7 +97,7 @@ spc_mass_mode  = ion_mass ; total_mass or ion_mass
 ion_mass       = 1
 mass_ratio     = 25       ; electron mass defined through ratio of masses
 
-; [plasma.maxwell]
+[maxwell]
 cs_light       = 20.0     ; speed of light
 
 ; relaxation periods (0.0=instantaneously relax, <0=don't)
