--- a/apps/2d/two-fluid/grad-five-moment/shock_tube/parameters.ini
+++ b/apps/2d/two-fluid/grad-five-moment/shock_tube/parameters.ini
@@ -19,7 +19,7 @@ mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 source_term = 0   ; source term (1-yes, 0-no)
 ;splitting   = none ; none; 1st order: fs, sf; 2nd order: fsf, sfs
 
-meqn        = 17  ; >=16; B_clean:>=17; E_clean:>=18; entropy:20
+meqn        = 16  ; >=16; B_clean:>=17; E_clean:>=18; entropy:20
 
 ; -------------------------------------------------
 ;   grid data
@@ -62,31 +62,34 @@ yhigh =  6.283185307179586 ; 3.141592653589793 ; upper end point
 ; -------------------------------------------------
 ;  Initial condition parameters
 ; -------------------------------------------------
-[initial]
-rhol  =  1.0   ; density (on left side of jump)
-unl   = -0.4   ; normal velocity (on left side of jump)
-utl   =  0.0   ; transverse velocity (on left side of jump)
-u3l   =  0.0   ; z-velocity (on left side of jump)
-pl    =  1.0   ; pressure (on left side of jump)
-Bnl   =  0.75  ; normal magnetic field (on left side of jump)
-Btl   =  1.0   ; transverse magnetic field (on left side of jump)
-B3l   =  0.0   ; z-magnetic field (on left side of jump)
-;
-rhor  =  0.2   ; density (on left side of jump)
-unr   = -0.4   ; normal velocity (on left side of jump)
-utr   =  0.0   ; transverse velocity (on left side of jump)
-u3r   =  0.0   ; z-velocity (on left side of jump)
-pr    =  0.1   ; pressure (on left side of jump)
-Bnr   =  0.75  ; normal magnetic field (on left side of jump)
-Btr   = -1.0   ; transverse magnetic field (on left side of jump)
-B3r   =  0.0   ; z-magnetic field (on left side of jump)
+;   [initial]
+;   rhol  =  1.0   ; density (on left side of jump)
+;   unl   = -0.4   ; normal velocity (on left side of jump)
+;   utl   =  0.0   ; transverse velocity (on left side of jump)
+;   u3l   =  0.0   ; z-velocity (on left side of jump)
+;   pl    =  1.0   ; pressure (on left side of jump)
+;   Bnl   =  0.75  ; normal magnetic field (on left side of jump)
+;   Btl   =  1.0   ; transverse magnetic field (on left side of jump)
+;   B3l   =  0.0   ; z-magnetic field (on left side of jump)
+;   ;
+;   rhor  =  0.2   ; density (on left side of jump)
+;   unr   = -0.4   ; normal velocity (on left side of jump)
+;   utr   =  0.0   ; transverse velocity (on left side of jump)
+;   u3r   =  0.0   ; z-velocity (on left side of jump)
+;   pr    =  0.1   ; pressure (on left side of jump)
+;   Bnr   =  0.75  ; normal magnetic field (on left side of jump)
+;   Btr   = -1.0   ; transverse magnetic field (on left side of jump)
+;   B3r   =  0.0   ; z-magnetic field (on left side of jump)
 ;
 ;angle = 0.52359877559 ; pi/6
 ;angle = 0.78539816339 ; pi/4
 
+
+; -------------------------------------------------
+;   plasma parameters
+; -------------------------------------------------
 [plasma]
 model_name                     = g05
-riemann_subsystem_firstindices = 1,6,11,15,17,19
 
 ; model parameters
 ; 
@@ -97,8 +100,9 @@ spc_mass_mode  = ion_mass ; total_mass or ion_mass
 ion_mass       = 1
 mass_ratio     = 25       ; electron mass defined through ratio of masses
 
-[maxwell]
-cs_light       = 20.0     ; speed of light
+
+; This is not currenlty being used. It is hard coded into ComponentID
+;riemann_subsystem_firstindices = 1,6,11,15,17,19 
 
 ; relaxation periods (0.0=instantaneously relax, <0=don't)
 ;source_type_Emom = split; simple;
@@ -113,10 +117,20 @@ cs_light       = 20.0     ; speed of light
 ;clean_E_field     = 0     ; (0=no, 1=yes)
 ;allow_fast_sound  = 1     ; if sound>light: -1=error, 0=warn, 1=proceed
 
+
+; -------------------------------------------------
+;   "Maxwell" parameters (currently only speed of light)
+; -------------------------------------------------
+[maxwell]
+cs_light       = 20.0     ; speed of light
+
+; -------------------------------------------------
 ; GEM problem parameters (ICs and BCs)
 ;
 ; These parameters pulled from DoGPack
 ;
+; -------------------------------------------------
+
 ;[GEM]
 ;temp_ratio     = 5.
 ;B_0            = 1.0      ; typical magnetic field strength
