more work on two-fluid: something compiles and runs with nonzero wave speed

--- a/apps/2d/two-fluid/grad-five-moment/lib/Makefile.defs
+++ b/apps/2d/two-fluid/grad-five-moment/lib/Makefile.defs
@@ -22,6 +22,9 @@ SetWaveSpd          = $(APP_LIB)/SetWaveSpd
 # Auxilary function
 AuxFunc             = $(APP_LIB)/AuxFunc
 
+# Source term function is same for all two-fluid routines
+SourceTermFunc      = $(APP_LIB)/SourceTermFunc
+
 # Extra stuff!
 AfterQinit          = $(APP_LIB)/AfterQinit
 
