--- a/apps/2d/two-fluid/grad-five-moment/shock_tube/parameters.ini
+++ b/apps/2d/two-fluid/grad-five-moment/shock_tube/parameters.ini
@@ -16,8 +16,7 @@ verbosity   = 1         ; verbosity of output
 ; options that describe the model
 maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
 mcapa       = 0   ; mcapa (capacity function index in aux arrays)
-source_term = 0   ; source term (1-yes, 0-no)
-;splitting   = none ; none; 1st order: fs, sf; 2nd order: fsf, sfs
+source_term = 1   ; source term (1-yes, 0-no)
 
 meqn        = 16  ; >=16; B_clean:>=17; E_clean:>=18; entropy:20
 
@@ -85,22 +84,29 @@ yhigh =  6.283185307179586 ; 3.141592653589793 ; upper end point
 ;angle = 0.78539816339 ; pi/4
 
 
-; -------------------------------------------------
+; ---------------------------------------------------------------------------- ;
 ;   plasma parameters
-; -------------------------------------------------
+; ---------------------------------------------------------------------------- ;
 [plasma]
-model_name                     = g05
+model_name     = g05  ; code currenlty only supports Grad 5 moment model
 
 ; model parameters
 ; 
 gamma          = 1.666666666666667    ; (adiabatic gas constant)
 
-; [plasma.twoFluid]
-spc_mass_mode  = ion_mass ; total_mass or ion_mass
-ion_mass       = 1
+;spc_mass_mode  = ion_mass ; total_mass or ion_mass
+ion_mass       = 1        ; mass of an ion
 mass_ratio     = 25       ; electron mass defined through ratio of masses
+cc_factor      = 1.05     ; Perfectly-hyperbolic-Maxwell (PHM) eqn modifier
+clean_E_field  = 0        ; Flag for cleaning Electric field (0=no, 1=yes)
 
 
+; ---------------------------------------------------------------------------- ;
+; The parameters below this part were pulled from DoGPack, and are not used in
+; this code
+; ---------------------------------------------------------------------------- ;
+
+;
 ; This is not currenlty being used. It is hard coded into ComponentID
 ;riemann_subsystem_firstindices = 1,6,11,15,17,19 
 
@@ -114,22 +120,21 @@ mass_ratio     = 25       ; electron mass defined through ratio of masses
 ; method parameters
 ; [plasma.method]
 ;cc                = 1.05  ; PHM eqn modifier
-;clean_E_field     = 0     ; (0=no, 1=yes)
 ;allow_fast_sound  = 1     ; if sound>light: -1=error, 0=warn, 1=proceed
 
 
-; -------------------------------------------------
+; ---------------------------------------------------------------------------- ;
 ;   "Maxwell" parameters (currently only speed of light)
-; -------------------------------------------------
+; ---------------------------------------------------------------------------- ;
 [maxwell]
 cs_light       = 20.0     ; speed of light
 
-; -------------------------------------------------
+; ---------------------------------------------------------------------------- ;
 ; GEM problem parameters (ICs and BCs)
 ;
-; These parameters pulled from DoGPack
+; These parameters pulled from DoGPack and not used in this code
 ;
-; -------------------------------------------------
+; ---------------------------------------------------------------------------- ;
 
 ;[GEM]
 ;temp_ratio     = 5.
