Fixed bug with where gamma was getting referenced.
The projection steps were using an uninitiated value of gamma. These have now
been changed to onlly refer to global_ini_params, and the code runs and
presents something reasonable (for the time being).

Next up: perfectly hyperbolic Maxwell (PHM)

--- a/apps/2d/two-fluid/grad-five-moment/lib/Makefile.defs
+++ b/apps/2d/two-fluid/grad-five-moment/lib/Makefile.defs
@@ -26,7 +26,7 @@ AuxFunc             = $(APP_LIB)/AuxFunc
 SourceTermFunc      = $(APP_LIB)/SourceTermFunc
 
 # Extra stuff!
-AfterQinit          = $(APP_LIB)/AfterQinit
+# AfterQinit          = $(APP_LIB)/AfterQinit
 
 # place to add objects and sources
 #
