--- a/apps/2d/two-fluid/grad-five-moment/shock_tube/parameters.ini
+++ b/apps/2d/two-fluid/grad-five-moment/shock_tube/parameters.ini
@@ -2,7 +2,8 @@
 [finess]
 ndims       = 2          ; 1, 2, or 3
 nout        = 10         ; number of output times to print results
-tfinal      = 40         ; final time
+;tfinal      = 40         ; final time
+tfinal      = 2         ; final time
 initial_dt  = 0.018      ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 1.00      ; max allowable Courant number 1/(2k-1)
