Implicit 1D Wave Solver: Fixed boundary points, initial condition

--- a/apps/1d/wave/implicit/parameters.ini
+++ b/apps/1d/wave/implicit/parameters.ini
@@ -1,12 +1,12 @@
 ; Parameters common to FINESS applications
 [finess]
 ndims       = 1          ; 1, 2, or 3
-nout        = 050        ; number of output times to print results
-tfinal      = 0.05       ; final time
-initial_dt  = 0.01       ; initial dt
-max_dt      = 0.01      ; max allowable dt 
-max_cfl     = 1.00      ; max allowable Courant number 1/(2k-1)
-desired_cfl = 1.00      ; desired Courant number
+nout        = 0001       ; number of output times to print results
+tfinal      = 1.250      ; final time
+initial_dt  = 0.001      ; initial dt
+max_dt      = 0.001     ; max allowable dt 
+max_cfl     = 1.0e6     ; max allowable Courant number 1/(2k-1)
+desired_cfl = 1.0e5     ; desired Courant number
 nv          = 5000       ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5         ; order of accuracy in space
@@ -24,7 +24,7 @@ meqn        = 1   ; This is the scalar (two-way) wave equation
 ;   grid data
 ; -------------------------------------------------
 [grid]
-mx    = 128     ; number of grid elements in x-direction
+mx    = 500     ; number of grid elements in x-direction
 mbc   =  5      ; number of ghost cells on each boundary
 xlow  =  -1.0e0 ; left end point
 xhigh =   1.0e0 ; 6.283185307179586 ; right end point
