--- a/apps/1d/two-fluid/grad-five-moment/shock_tube/parameters.ini
+++ b/apps/1d/two-fluid/grad-five-moment/shock_tube/parameters.ini
@@ -3,10 +3,10 @@
 ndims       = 1          ; 1, 2, or 3
 nout        = 10         ; number of output times to print results
 tfinal      = 4          ; final time
-initial_dt  = 0.018      ; initial dt
-max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 1.00      ; max allowable Courant number 1/(2k-1)
-desired_cfl = 0.70      ; desired Courant number
+initial_dt  = 0.001      ; initial dt
+max_dt      = 0.001      ; max allowable dt 
+max_cfl     = 1.0e6      ; max allowable Courant number 1/(2k-1)
+desired_cfl = 1.0e5      ; desired Courant number
 nv          = 5000       ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5         ; order of accuracy in space
@@ -14,7 +14,7 @@ time_order  = 4         ; order of accuracy in time
 verbosity   = 1         ; verbosity of output
 
 ; options that describe the model
-maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
+maux        = 17   ; maux (number of aux arrays, maux >= mcapa)
 mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 source_term = 1   ; source term (1-yes, 0-no)
 
