updated parameters for 2fluid test case - this breaks the application

--- a/apps/1d/two-fluid/grad-five-moment/shock_tube/parameters.ini
+++ b/apps/1d/two-fluid/grad-five-moment/shock_tube/parameters.ini
@@ -16,7 +16,7 @@ verbosity   = 1         ; verbosity of output
 ; options that describe the model
 maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
 mcapa       = 0   ; mcapa (capacity function index in aux arrays)
-source_term = 1   ; source term (1-yes, 0-no)
+source_term = true ; source term (1-yes, 0-no)
 
 meqn        = 16  ; >=16; B_clean:>=17; E_clean:>=18; entropy:20
 
@@ -24,10 +24,10 @@ meqn        = 16  ; >=16; B_clean:>=17; E_clean:>=18; entropy:20
 ;   grid data
 ; -------------------------------------------------
 [grid]
-mx    = 500     ; number of grid elements in x-direction
+mx    = 5000    ; number of grid elements in x-direction
 mbc   =  5      ; number of ghost cells on each boundary
-xlow  =  0.0e0  ; left end point
-xhigh =  12.566370614359172 ; 6.283185307179586 ; right end point
+xlow  =  -0.5e0 ; left end point
+xhigh =   1.5   ; 6.283185307179586 ; right end point
 
 ; ---------------------------------------------------------------------------- ;
 ;   plasma parameters
@@ -39,8 +39,10 @@ model_name     = g05  ; code currenlty only supports Grad 5 moment model
 ; 
 gamma          = 1.666666666666667    ; (adiabatic gas constant)
 
-ion_mass       = 1        ; mass of an ion
-mass_ratio     = 10       ; electron mass defined through ratio of masses
+mass_ratio     = 1836     ; electron mass defined through ratio of masses
+debye_length   = 0.01     ; normalized debye_length
+larmor_radius  = 0.01     ; normalized larmor_radius
+
 cc_factor      = 1.05     ; Perfectly-hyperbolic-Maxwell (PHM) eqn modifier
 clean_E_field  = 0        ; Flag for cleaning Electric field (0=no, 1=yes)
 
@@ -48,5 +50,5 @@ clean_E_field  = 0        ; Flag for cleaning Electric field (0=no, 1=yes)
 ;   "Maxwell" parameters (currently only speed of light)
 ; ---------------------------------------------------------------------------- ;
 [maxwell]
-cs_light       = 20.0     ; speed of light
+cs_light       = 100.0     ; speed of light
 
