1d PP euler examples

--- a/apps/1d/euler/double_rarefaction/parameters.ini
+++ b/apps/1d/euler/double_rarefaction/parameters.ini
@@ -3,10 +3,10 @@
 ndims       = 1         ; 1, 2, or 3
 nout        = 10        ; number of output times to print results
 tfinal      = 0.6       ; final time
-initial_dt  = 0.0005    ; initial dt
+initial_dt  = 0.0000005  ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 0.16      ; max allowable Courant number
-desired_cfl = 0.15      ; desired Courant number
+max_cfl     = 0.3     ; max allowable Courant number
+desired_cfl = 0.26      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 mpp_limiter = true ; flag for positivity preserving limiter
@@ -27,3 +27,4 @@ xhigh =  1.0e0 ; right end point
 gamma = 1.4     ; gamma (gas constant)
 [weno]
 eps   = 1e-6
+alpha_scaling = 1.2
