Fixed bug with electron density in initialization routine.

--- a/apps/1d/two-fluid/grad-five-moment/shock_tube/parameters.ini
+++ b/apps/1d/two-fluid/grad-five-moment/shock_tube/parameters.ini
@@ -1,8 +1,8 @@
 ; Parameters common to FINESS applications
 [finess]
 ndims       = 1          ; 1, 2, or 3
-nout        = 10         ; number of output times to print results
-tfinal      = 4          ; final time
+nout        = 050        ; number of output times to print results
+tfinal      = 0.1        ; final time
 initial_dt  = 0.018      ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 1.00      ; max allowable Courant number 1/(2k-1)
@@ -24,10 +24,10 @@ meqn        = 16  ; >=16; B_clean:>=17; E_clean:>=18; entropy:20
 ;   grid data
 ; -------------------------------------------------
 [grid]
-mx    = 5000    ; number of grid elements in x-direction
+mx    = 0500    ; number of grid elements in x-direction
 mbc   =  5      ; number of ghost cells on each boundary
-xlow  =  -0.5e0 ; left end point
-xhigh =   1.5   ; 6.283185307179586 ; right end point
+xlow  =  0.0E0  ; left end point
+xhigh =  1.0E0  ; 6.283185307179586 ; right end point
 
 ; ---------------------------------------------------------------------------- ;
 ;   plasma parameters
@@ -39,9 +39,9 @@ model_name     = g05  ; code currenlty only supports Grad 5 moment model
 ; 
 gamma          = 1.666666666666667    ; (adiabatic gas constant)
 
-mass_ratio     = 1836     ; electron mass defined through ratio of masses
+mass_ratio     = 0010.0   ; electron mass defined through ratio of masses
 debye_length   = 0.01     ; normalized debye_length
-larmor_radius  = 0.01     ; normalized larmor_radius
+larmor_radius  = 100.0    ; normalized larmor_radius
 
 cc_factor      = 1.05     ; Perfectly-hyperbolic-Maxwell (PHM) eqn modifier
 clean_E_field  = 0        ; Flag for cleaning Electric field (0=no, 1=yes)
