the true flag does NOT turn on the sources

--- a/apps/1d/two-fluid/grad-five-moment/shock_tube/parameters.ini
+++ b/apps/1d/two-fluid/grad-five-moment/shock_tube/parameters.ini
@@ -17,7 +17,7 @@ global_alpha = true  ; parameter for using a global value for alpha
 ; options that describe the model
 maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
 mcapa       = 0   ; mcapa (capacity function index in aux arrays)
-source_term = true ; source term (1-yes, 0-no)
+source_term = 1 ; source term (1-yes, 0-no)
 meqn        = 16  ; >=16; B_clean:>=17; E_clean:>=18; entropy:20
 
 ; -------------------------------------------------
