Updated to two-fluid parameters and eig-projections.
* IMPORTANT EDIT: Redid finess.py to use bool for SOURCE_TERM.  There is currently no check if
  you accidentally use source_term = 1 in place of source_term = false.

* Updated parameters.ini file that produces reasonable solution for shock-tube
  problem (which also agrees with the edit for the source_term value).

* Modified ProjectLeft/ProjectRight to use the eigen decomposition from
  DoGPack.  This should be identical to previous version, but it has not been
  tested.

* Updated plotting routine.

--- a/apps/1d/two-fluid/grad-five-moment/shock_tube/parameters.ini
+++ b/apps/1d/two-fluid/grad-five-moment/shock_tube/parameters.ini
@@ -5,9 +5,9 @@ nout        = 50        ; number of output times to print results
 tfinal      = 0.1       ; final time
 initial_dt  = 0.000018  ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 1.00      ; max allowable Courant number 1/(2k-1)
-desired_cfl = 0.50      ; desired Courant number
-nv          = 5000       ; max number of time steps per call to DogSolve
+max_cfl     = 0.10      ; max allowable Courant number 1/(2k-1)
+desired_cfl = 0.08      ; desired Courant number
+nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5         ; order of accuracy in space
 time_order  = 4         ; order of accuracy in time
@@ -17,14 +17,14 @@ global_alpha = true  ; parameter for using a global value for alpha
 ; options that describe the model
 maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
 mcapa       = 0   ; mcapa (capacity function index in aux arrays)
-source_term = 1 ; source term (1-yes, 0-no)
+source_term = true ; source term (true or false)
 meqn        = 16  ; >=16; B_clean:>=17; E_clean:>=18; entropy:20
 
 ; -------------------------------------------------
 ;   grid data
 ; -------------------------------------------------
 [grid]
-mx    = 0500    ; number of grid elements in x-direction
+mx    = 5000    ; number of grid elements in x-direction
 mbc   =  5      ; number of ghost cells on each boundary
 xlow  =  0.0E0  ; left end point
 xhigh =  1.0E0  ; right end point
@@ -40,14 +40,14 @@ model_name     = g05  ; code currenlty only supports Grad 5 moment model
 gamma          = 1.666666666666667    ; (adiabatic gas constant)
 
 ; These parameters work:
-mass_ratio     = 0010.0   ; electron mass defined through ratio of masses
-debye_length   = 0.01     ; normalized debye_length
-larmor_radius  = 100.0    ; normalized larmor_radius
+;mass_ratio     = 0010.0   ; electron mass defined through ratio of masses
+;debye_length   = 0.01     ; normalized debye_length
+;larmor_radius  = 100.0    ; normalized larmor_radius
 
 ; These parameters do not work (and should be same as in paper!)
-; mass_ratio     = 1836.0   ; electron mass defined through ratio of masses
-; debye_length   =  0.01    ; normalized debye_length
-; larmor_radius  =  0.01    ; normalized larmor_radius
+mass_ratio     = 1836.0   ; electron mass defined through ratio of masses
+debye_length   =  0.01    ; normalized debye_length
+larmor_radius  =  0.01    ; normalized larmor_radius
 
 cc_factor      = 1.05     ; Perfectly-hyperbolic-Maxwell (PHM) eqn modifier
 clean_E_field  = 0        ; Flag for cleaning Electric field (0=no, 1=yes)
