--- a/apps/1d/mhd/shock_tube/parameters.ini
+++ b/apps/1d/mhd/shock_tube/parameters.ini
@@ -1,7 +1,7 @@
 ; Parameters common to dogpack applications
 [finess]
 ndims       = 1         ; 1, 2, or 3
-nout        = 50        ; number of output times to print results
+nout        = 5         ; number of output times to print results
 tfinal      = 0.03      ; final time
 initial_dt  = 0.000008  ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
@@ -9,16 +9,17 @@ max_cfl     = 0.50      ; max allowable Courant number 1/(2k-1)
 desired_cfl = 0.40      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 11  ; =method(1)= order of accuracy in space
+space_order = 5  ; =method(1)= order of accuracy in space
 time_order  = 4  ; =method(2)= order of accuracy in time
 verbosity   = 1  ; =method(4)= verbosity of output
 mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
 maux        = 0  ; =method(6)= maux (number of aux arrays, maux >= mcapa)
 source_term = false  ; =method(7)= source term (1-yes, 0-no)
 meqn        = 8  ; number of equations
+global_alpha = true ; flag for global alpha
 [grid]
 mx    = 1000   ; number of grid elements in x-direction
-mbc   =  7     ; number of ghost cells on each boundary
+mbc   =  3     ; number of ghost cells on each boundary
 xlow  =  0.0e0 ; left end point
 xhigh =  1.0e0 ; right end point
 [mhd]
@@ -28,7 +29,7 @@ gamma = 1.666666666666667     ; gamma (gas constant)
 ; -------------------------------------------------
 [initial]
 rhol  =  1.0   ; density (on left side of jump)
-unl   = -0.4   ; normal velocity (on left side of jump)
+unl   =  0.0   ; normal velocity (on left side of jump)
 utl   =  0.0   ; transverse velocity (on left side of jump)
 u3l   =  0.0   ; z-velocity (on left side of jump)
 pl    =  1.0   ; pressure (on left side of jump)
@@ -36,11 +37,11 @@ Bnl   =  0.75  ; normal magnetic field (on left side of jump)
 Btl   =  1.0   ; transverse magnetic field (on left side of jump)
 B3l   =  0.0   ; z-magnetic field (on left side of jump)
 ;
-rhor  =  0.2   ; density (on left side of jump)
-unr   = -0.4   ; normal velocity (on left side of jump)
-utr   =  0.0   ; transverse velocity (on left side of jump)
-u3r   =  0.0   ; z-velocity (on left side of jump)
-pr    =  0.1   ; pressure (on left side of jump)
-Bnr   =  0.75  ; normal magnetic field (on left side of jump)
-Btr   = -1.0   ; transverse magnetic field (on left side of jump)
-B3r   =  0.0   ; z-magnetic field (on left side of jump)
+rhor  =  0.125 ; density (on right side of jump)
+unr   =  0.0   ; normal velocity (on right side of jump)
+utr   =  0.0   ; transverse velocity (on right side of jump)
+u3r   =  0.0   ; z-velocity (on right side of jump)
+pr    =  0.1   ; pressure (on right side of jump)
+Bnr   =  0.75  ; normal magnetic field (on right side of jump)
+Btr   = -1.0   ; transverse magnetic field (on right side of jump)
+B3r   =  0.0   ; z-magnetic field (on right side of jump)
