--- a/apps/2d/euler/radial_shock/parameters.ini
+++ b/apps/2d/euler/radial_shock/parameters.ini
@@ -9,10 +9,11 @@ max_cfl     = 0.50      ; max allowable Courant number 1/(2k-1)
 desired_cfl = 0.45      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 ;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+;time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 mpp_limiter = true ; flag for positivity preserving limiter
-space_order = 5  ; order of accuracy in space
-time_order  = 3  ; order of accuracy in time
+space_order = 7  ; order of accuracy in space
+time_order  = 7  ; order of accuracy in time
 verbosity   = 1  ; verbosity of output
 mcapa       = 0  ; mcapa (capacity function index in aux arrays)
 maux        = 0  ; maux (number of aux arrays, maux >= mcapa)
@@ -25,7 +26,7 @@ meqn        = 5  ; number of equations
 [grid]
 mx    = 160 	; number of grid elements in x-direction
 my    = 160     ; number of grid elements in y-direction
-mbc   = 5       ; number of ghost cells on each boundary
+mbc   = 7       ; number of ghost cells on each boundary
 xlow  = -1.0e0  ; left end point
 xhigh =  1.0e0  ; right end point
 ylow  = -1.0e0  ; lower end point
